fix herovideo overflowing

--- a/components/molecules/HeroVideo/general.css
+++ b/components/molecules/HeroVideo/general.css
@@ -1,17 +1,6 @@
 .hero {
   composes:
     global(relative)
-  ;
-  height: 0;
-  padding-bottom: 56.4%;
-}
-
-.inner {
-  composes:
-    global(absolute)
-    global(pin-t)
-    global(pin-l)
-    global(w-full)
     global(h-full)
     global(max-h-80screen)
     global(overflow-hidden)
@@ -20,13 +9,11 @@
 
 .video {
   composes:
-    global(absolute)
+    global(relative)
     global(block)
     global(w-full)
+    global(h-full)
   ;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .seekbarContainer {
